--- a/MallSwift/Podfile
+++ b/MallSwift/Podfile
@@ -18,6 +18,7 @@ target 'MallSwift' do
     pod 'RxSwift', '6.5.0'  # https://github.com/ReactiveX/RxSwift
     pod 'RxCocoa', '6.5.0'
     pod 'RxOptional', '~> 5.0.2'  # https://github.com/RxSwiftCommunity/RxOptional
+    pod 'RxGesture', '~> 4.0.4'  # https://github.com/RxSwiftCommunity/RxGesture
     
     # JSON
     pod 'SwiftyJSON', '~> 4.0'  # https://github.com/SwiftyJSON/SwiftyJSON
